--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,7 +23,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+      #- uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
@@ -34,3 +34,10 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+
+  testing:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: testing the job with some random prints
+        run: echo "This test is from praga"
